<resources>
    <string name="app_name">PassphraseGen</string>
    <string name="ButtonGenerateText">Generate</string>
    <string name="ButtonCopyToClipboardText">Copy to Clipboard</string>
    <string name="ActionSettingsText">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="TextViewProgressText">Populating word lists…</string>
    <string name="TextViewProgressTextFailure">Failed to populate word lists.</string>

    <!-- Preference values -->

    <string name="pref_pwgen_category_title">Passphrase Generation</string>

    <string name="pref_pwgen_capitalize_first_key">PWGEN_CAPITALIZE_FIRST</string>
    <string name="pref_pwgen_capitalize_first_title">First letter capitalization</string>
    <string name="pref_pwgen_capitalize_first_summary">Capitalize the first letter of every word</string>

    <string name="pref_pwstr_category_title">Password Strength</string>

    <string name="pref_pwstr_enable_key">PWSTR_ENABLE</string>
    <string name="pref_pwstr_enable_title">Show password strength</string>

    <string name="pref_pwstr_entropy_key">PWSTR_ENTROPY</string>
    <string name="pref_pwstr_entropy_title">Show entropy</string>
    <string name="pref_pwstr_entropy_summary">Show the current passphrase\'s strength in terms of bits of entropy.</string>

    <string name="pref_pwstr_cracktime_key">PWSTR_CRACKTIME</string>
    <string name="pref_pwstr_cracktime_title">Show cracking time</string>
    <string name="pref_pwstr_cracktime_summary">Show how much time it would take to crack this password.</string>

    <string name="pref_pwstr_crackstrength_key">PWSTR_CRACKSTRENGTH</string>
    <string name="pref_pwstr_crackstrength_title">Cracking strength</string>
    <string-array name="pref_pwstr_crackstrength_options">
        <item> 1   billion  guesses/sec (Home Computer)</item>
        <item> 100 billion  guesses/sec (Home Cracking Cluster)</item>
        <item> 1   trillion guesses/sec (Dedicated Cracking Cluster)</item>
        <item> 100 trillion guesses/sec (NSA)</item>
    </string-array>
    <string-array name="pref_pwstr_crackstrength_values">
        <item>1000000000</item>
        <item>100000000000</item>
        <item>1000000000000</item>
        <item>10000000000000</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
